# scrapwiki

./: README.md  setup.cfg
scrapwiki/: WikipediaPage.py
