[metadata]
name = scrapwiki
version = 0.0.1
author = Krittipoom Phalachun
author_email = krittipoom@outlook.com
description = Scrap Wikipedia page. Fetch title, paragraph or entire page html
long_description = A package that scrap Wikipedia page. Fetch title, paragraph or entire page html using beautifulsoup and requests
long_description_content_type = text/markdown
classifiers = 
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True